pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constSuperMethod.pkl
open class A {
  function bar() = 5
}

class B extends A {
  const foo = super.bar()
}

b: B
